--- a/src/main/webapp/WEB-INF/resources/admin/css/AdminLTE.css
+++ b/src/main/webapp/WEB-INF/resources/admin/css/AdminLTE.css
@@ -2647,6 +2647,7 @@ a:focus {
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
   border-top: 1px solid #f4f4f4;
+  max-width: 430px;
 }
 .table > thead > tr > th {
   border-bottom: 2px solid #f4f4f4;
